@startuml class_hierarchy
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 40

title Logic Gate Defense — Class Diagram

' ── Enums ──────────────────────────────────────────────────
enum TType {
  SENSOR
  PERCEPTRON
  AND
  OR
  XOR
  CANNON
  CPU
  NAND
  NONE
}

enum EType {
  BASIC
  FAST
  ARMORED
  ELITE
  BOSS
}

enum BossState {
  CHARGE
  EVADE
  RAMPAGE
}

enum EnemyTag {
  NONE
  BRUTE
  SWIFT
  BOUNTY
}

enum PathEntrySide {
  LEFT
  TOP
  RIGHT
  BOTTOM
}

' ── Structs ────────────────────────────────────────────────
struct TierInfo {
  + int cost
  + const char* name
  + const char* ability
}

struct TowerDef {
  + const char* label
  + const char* sym
  + Color col
  + int baseCost
  + const char* desc
  + TierInfo tiers[3]
}

struct PathCell {
  + int gx
  + int gy
}

struct PathPreset {
  + int count
  + int wx[16]
  + int wy[16]
  + const char* name
  + PathEntrySide entrySide
  + int family
  + int dualWeight
}

' ── GameEntity Inheritance ─────────────────────────────────
class GameEntity {
  + <<abstract>>
  + virtual ~GameEntity()
}

class GridEntity {
  # int gx
  # int gy
  + GridCenter() : Vector2
  + GridX() : int
  + GridY() : int
}

class PathEntity {
  # float pathPos
  # int pathIdx
  + PathPosition() : float
  + LaneIndex() : int
}

class VisualEffect {
  # float life
  + virtual Update(dt)
  + IsAlive() : bool
}

class Tower {
  + int id
  + TType type
  + int level
  + float sig
  + float w1, w2, bias
  + int cooldown
  + float anim
  + std::vector<int> conns
  + float range
  + float damage
  + int fireRateTicks
  + int kills
  + float totalDmg
  + float upgradeFlash
  + bool pulseBurst
  + int burstCount
  + float activeCd
  + PerceptronLearner learner
  + float pctTargetAcc
  + int pctTargetSamples
  + float sampledIn1, sampledIn2, sampledOut
  + int sampleCount
  + std::vector<float> lossHistory
  + SampleSignal(in1, in2, out)
  + FlushSample()
}

class Enemy {
  + int id
  + EType type
  + float hp
  + float maxHp
  + float armor
  + float spd
  + int reward
  + float angle
  + bool marked
  + float markTimer
  + bool stealth
  + float flashTimer
  + float regenTimer
  + float stunTimer
  + bool shielded
  + float shieldHp
  + bool hasSplit
  + EnemyTag tag
  + float spawnFx
  + BossState bossState
  + float bossStateTimer
  + float evadeSpdMult
  + float localThreat
  + TickBoss(dt, threat, hpRatio)
}

class Bullet {
  + Vector2 pos
  + Vector2 vel
  + int targetId
  + int sourceId
  + float dmg
  + bool crit
  + bool splash
  + float splashR
  + Color col
}

class SigPulse {
  + Vector2 src
  + Vector2 dst
  + float t
  + Color col
  + Update(dt)
}

class Particle {
  + Vector2 pos
  + Vector2 vel
  + float maxLife
  + float radius
  + Color col
  + Update(dt)
}

class FloatText {
  + Vector2 pos
  + std::string text
  + Color col
  + Update(dt)
}

class Star {
  + float x
  + float y
  + float r
  + float bright
}

class AIHint {
  + int gx, gy
  + TType suggest
  + float score
  + std::string reason
  + float flashT
}

GameEntity <|-- GridEntity
GameEntity <|-- PathEntity
GameEntity <|-- VisualEffect
GameEntity <|-- Bullet
GameEntity <|-- Star
GridEntity <|-- Tower
PathEntity <|-- Enemy
VisualEffect <|-- SigPulse
VisualEffect <|-- Particle
VisualEffect <|-- FloatText

' ── AI / Learning ─────────────────────────────────────────
class PerceptronLearner {
  - float accInput1_
  - float accInput2_
  - float accOutput_
  - int samples_
  - float lastLoss_
  - float lrDecay_
  + LastLoss() : float
  + LearningRateDecay() : float
  + SampleCount() : int
  + BoostLearningRate(amount)
  + Accumulate(in1, in2, out)
  + Reset()
  + Update(target, w1, w2, bias, baseLR)
}

class ThreatMap {
  - float cell_[24][20]
  + AddKill(gx, gy, value)
  + Get(gx, gy) : float
  + GetMax() : float
  + Decay(factor)
}

class EnemyBrain {
  - float wIH_[3][2]
  - float bH_[2]
  - float wHO_[2]
  - float bO_
  - float lastLoss_
  - int trainCount_
  + LastLoss() : float
  + TrainCount() : int
  + OutputWeight(index) : float
  + HiddenBias(index) : float
  + Eval(threatAhead, hpRatio, survRate) : float
  + Learn(threatAhead, hpRatio, survRate, target, lr)
}

class EnemyIntel {
  + EnemyBrain brain
  + float typeSurvRate[5]
  + std::array<float, MAX_LANES> pathSurvRate
  + int typeSpawned[5]
  + int typeSurvived[5]
  + std::array<int, MAX_LANES> pathSpawned
  + std::array<int, MAX_LANES> pathSurvived
  + std::array<float, MAX_LANES> pathAvgThreat
  + int wavesLearned
  + bool adapted
  + ResetWave()
  + LearnFromWave(activeLaneCount)
  + BrainPickPath(activeLaneCount) : int
  + WeightedType(rand01, wave) : EType
  + PickPath(rand01, activeLaneCount) : int
  + TopTypeName() : const char*
  + PreferredPath(activeLaneCount) : int
}

class DefenseAdvisorNN {
  - float wIH_[6][4]
  - float bH_[4]
  - float wHO_[4][4]
  - float bO_[4]
  - float lastProb_[4]
  - float lastLoss_
  - int trainCount_
  + Probability(index) : float
  + LastLoss() : float
  + TrainCount() : int
  + Forward(in[6], prob[4])
  + Recommend(in[6]) : int
  + Learn(in[6], targetClass, lr)
}

EnemyIntel *-- EnemyBrain : brain

' ── High Score System ──────────────────────────────────────
class ScoreEntry {
  + <<abstract>>
  + std::string playerName
  + int waveReached
  + long timestamp
  + virtual ~ScoreEntry()
  + virtual Format() : string = 0
  + virtual Save(ofstream&)
  + virtual Load(ifstream&)
  + virtual Compare(other) : int
}

class TowerDefenseScore {
  + int kills
  + float accuracy
  + Format() : string <<override>>
  + Save(ofstream&) <<override>>
  + Load(ifstream&) <<override>>
}

class HighScoreManager {
  + static constexpr int MAX_ENTRIES = 10
  + static constexpr const char* FILE_PATH = "highscore.dat"
  + std::vector<TowerDefenseScore> entries
  + std::map<std::string, int> nameIndex
  + AddScore(score)
  + SaveToFile() : bool
  + LoadFromFile() : bool
  + Clear()
  + GetBest() : TowerDefenseScore*
  + FindByName(name) : TowerDefenseScore*
  + Size() : size_t
  + DrawLeaderboard(G, x, y, w, h)
  - SortDescending()
}

class HighScoreException {
  + <<exception>>
  + HighScoreException(msg)
}

ScoreEntry <|-- TowerDefenseScore
HighScoreManager o-- "0..*" TowerDefenseScore
HighScoreException --|> std::runtime_error

' ── Tutorial System ────────────────────────────────────────
class TutorialLessonInfo {
  + TutorialLessonId id
  + const char* title
  + const char* focus
  + const char* enemy
  + const char* duration
  + const char* desc
  + Color col
}

class TutorialStep {
  + const char* title
  + const char* body
  + const char* hint
  + TutorialObjective objective
  + bool allowSkip
}

class TutorialObjective {
  + TutorialObjectiveKind kind
  + TType towerType
  + EType enemyType
  + int requiredCount
  + float requiredSeconds
}

class TutorialRuntime {
  + bool active
  + TutorialLessonId lessonId
  + int selectedLesson
  + int stepIndex
  + float stepTimer
  + bool exitPromptOpen
  + int exitPromptChoice
  + TutorialExitTarget returnToSelectOnExit
  + bool lessonComplete
  + TType lastPlacedType
  + TType lastSelectedType
  + TType lastSkillType
  + TType lastConnSrcType
  + TType lastConnDstType
  + int placedCount
  + int selectedCount
  + int connectionCount
  + int waveStartCount
  + int skillUseCount
  + int survivalCount
  + std::array<int, 5> killCountByType
  + std::array<bool, TUTORIAL_LESSON_COUNT> completedLessons
  + ResetObjectiveCounters()
  + ResetTransient()
}

TutorialStep *-- TutorialObjective

' ── Game ──────────────────────────────────────────────────
class Game {
  + std::vector<Tower> towers
  + std::vector<Enemy> enemies
  + std::vector<Bullet> bullets
  + std::vector<SigPulse> pulses
  + std::vector<Particle> particles
  + std::vector<FloatText> floats
  + std::vector<Star> stars
  + ThreatMap threatMap
  + std::vector<AIHint> aiHints
  + EnemyIntel intel
  + DefenseAdvisorNN defNN
  + WaveEvent currentEvent
  + std::string eventName
  + float eventBannerTimer
  + Incident currentIncident
  + std::string incidentName
  + float incidentTimer
  + float incidentBannerTimer
  + float incidentRollTimer
  + bool incidentTriggered
  + bool showThreat
  + bool showAIHints
  + bool dualPath
  + int activeLaneCount
  + bool blackoutActive
  + float buffOverfreq
  + float buffArmorBreak
  + float buffGlobalMark
  + int nextId
  + int credits
  + int score
  + int highScore
  + int wave
  + HighScoreManager highScoreMgr
  + int lives
  + float cpuHp
  + bool paused
  + bool showHelp
  + TutorialRuntime tutorial
  + Phase phase
  + int waveCount
  + int spawned
  + int spawnLaneCursor
  + float spawnTimer
  + float trainingTimer
  + TType placing
  + int selectedId
  + int connectSrc
  + std::string msg
  + float msgTimer
  + std::mt19937 rng
  + int waveKills
  + int waveEscaped
  + float waveDmg
  + int combo
  + float comboTimer
  + float comboSurgeTimer
  + float waveTelegraphTimer
  + float spawnPulseTimer
  + int spawnPulsePath
  + std::array<TrainingReward, 3> trainingChoices
  + int trainingChoiceCount
  + float shakeT
  + float shakePow
  + MapOrigin() : Vector2
  + CC(gx, gy) : Vector2
  + EnemyWorld(e) : Vector2
  + EnemyGrid(e) : Vector2
  + FindTower(id) : Tower*
  + TowerAt(gx, gy) : Tower*
  + FindEnemy(id) : Enemy*
  + IsPath(gx, gy) : bool
  + IsLaneActive(laneSlot) : bool
  + ActiveLaneCount() : int
  + WouldCycle(src, dst) : bool
  + ValidateConnect(src, dst) : string
  + ApplyTowerStats(t)
  + UpgradeTower(t) : bool
  + SpawnParticles(pos, col, n, spd)
  + AddFloat(pos, txt, col)
  + SetMsg(m)
  + Shake(p, t)
  + InitStars()
  + GenerateAIHints()
  + TrainDefenseNN()
  + TrainPerceptrons()
  + StartWave()
  + SpawnEnemy()
  + ApplyTrainingChoice(choiceIdx)
  + PropagateSignals(dt)
  + Update(dt)
  + HandleInput()
  + Reset()
}

Game *-- "0..*" Tower
Game *-- "0..*" Enemy
Game *-- "0..*" Bullet
Game *-- "0..*" SigPulse
Game *-- "0..*" Particle
Game *-- "0..*" FloatText
Game *-- "0..*" Star
Game *-- "1" ThreatMap
Game *-- "0..*" AIHint
Game *-- "1" EnemyIntel
Game *-- "1" DefenseAdvisorNN
Game *-- "1" HighScoreManager
Game *-- "1" TutorialRuntime

Tower --> PerceptronLearner : learner
Tower ..> TType
Enemy ..> EType
Enemy ..> BossState
Enemy ..> EnemyTag
Enemy ..> PathCell
AIHint ..> TType
TutorialLessonInfo ..> TutorialLessonId
TutorialRuntime ..> TutorialLessonId
TutorialRuntime ..> TutorialExitTarget
Game ..> TType
Game ..> EType

' ── Nested Enums (Game) ────────────────────────────────────
enum "Game::WaveEvent" as WaveEvent {
  NONE
  SWARM
  ARMORED
  STEALTH
  ELITE_RUSH
  BOSS_ESCORT
  REGEN_ARMY
  DOUBLE_SPD
  BLACKOUT
  MUTANT
  SIEGE
}

enum "Game::Incident" as Incident {
  NONE
  SIGNAL_STORM
  ROUTE_SURGE
  BOUNTY_WINDOW
}

enum "Game::Phase" as Phase {
  MENU
  TUTORIAL_SELECT
  BUILD
  FIGHT
  TRAINING
  GAMEOVER
}

enum "Game::TrainingRewardKind" as TrainingRewardKind {
  CREDITS
  PATCH
  UPGRADE
}

Game *-- WaveEvent
Game *-- Incident
Game *-- Phase
Game *-- TrainingRewardKind

' ── Tutorial Enums ─────────────────────────────────────────
enum TutorialLessonId {
  BASIC_DEFENSE
  SENSOR
  CANNON
  AND_GATE
  OR_GATE
  XOR_GATE
  NAND_GATE
  PERCEPTRON
  MULTI_LANE
  COUNT
}

enum TutorialExitTarget {
  SELECT
  MENU
}

enum TutorialObjectiveKind {
  NONE
  PLACE_TOWER
  SELECT_TOWER
  CONNECT_TOWERS
  START_WAVE
  KILL_ENEMY
  SURVIVE
  USE_SKILL
  WAIT_SECONDS
}

@enduml
